--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
 
     <script id="message-template" type="text/html">
         <div>
-            <p>{{message}}</p>
+            <p>{{createdAt}} - {{message}}</p>
         </div>
     </script>
 
     <script id="location-template" type="text/html">
         <div>
-            <p><a href="{{url}}" target="_blank">My Location</a></p>
+            <p>{{createdAt}} <a href="{{url}}" target="_blank">My Location</a></p>
         </div>
     </script>
 
