--- a/public/chat.html
+++ b/public/chat.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/favicon.png">
-    <link rel="stylesheet" href="./css/styles.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Chat App</title>
 </head>
 
 <body>
 
     <div class="chat">
-        <div class="chat__sidebar">
+        <div id="sidebar" class="chat__sidebar">
 
         </div>
         <div class="class__main">
@@ -23,7 +23,7 @@
             
             <div class="compose">
                 <form id="messageform">
-                    <input name="message" placeholder="Message">
+                    <input name="message" placeholder="Message" required autocomplete="off">
                     <button>Send</button>
                 </form>
                 <button id="send-location">Send Location</button>
@@ -35,8 +35,8 @@
     <script id="message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">User</span>
-                <span class="message__meta">{{createdAt}}</span>
+                <span class="message__name">{{username}}</span>
+                <span class=" message__meta">{{createdAt}}</span>
             </p>
             <p>{{message}}</p>
         </div>
@@ -45,12 +45,24 @@
     <script id="location-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">User</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p><a href="{{url}}" target="_blank">My Location</a></p>
         </div>
     </script>
+
+    <script id="sidebar-template" type="text/html">
+        <h2 class="room-title">{{room}}</h2>
+        <h3 class="list-title">Users</h3>
+        <ul class="users">
+            {{#users}}
+                <li>{{username}}</li>
+            {{/users}}
+        </ul>
+    </script>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
